--- a/itsfv6/iTSfvGUI/Properties/Resources.resx
+++ b/itsfv6/iTSfvGUI/Properties/Resources.resx
@@ -130,4 +130,8 @@
   <data name="itsfv_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\itsfv2_7_256x256x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MainWindow_CheckUpdate_" xml:space="preserve">
+    <value>A newer version of iTSfv is available. 
+Would you like to download and install it?</value>
+  </data>
 </root>
